--- a/PushBoxWebVersion/index.html
+++ b/PushBoxWebVersion/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>推箱子网页版</title>
+		<link rel="prefetch" href="img/pushBoxSprite.png" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="css/index.css"/>
 	</head>
