--- a/PushBoxWebVersion/index.html
+++ b/PushBoxWebVersion/index.html
@@ -6,6 +6,7 @@
 		<link rel="prefetch" href="img/pushBoxSprite.png" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="css/index.css"/>
+    <script src="./fontIcon_onload/iconfont.js"></script>
 	</head>
 	<body>
 		<!-- 
