--- a/PushBoxWebVersion/index.html
+++ b/PushBoxWebVersion/index.html
@@ -25,19 +25,23 @@
         <p>已加载 0 % </p>
       </div>
     </div>
-    <script type="text/javascript">
-  	(function(){
-      var img = document.createElement('img');
-      img.src = './img/pushBoxSprite.png';
-      img.onload = function (){
-        document.getElementsByTagName('p')[0].innerHTML = '全力加载中... ';
-        var box = document.getElementsByClassName('onloading')[0];
-        box.style.display = 'none';//加载完成后页面消失
-      };
-    }())
-    </script>
+   
      <!-- 游戏的主体界面 -->
      <div id="mainContainer" class="clearfix">
+    <script type="text/javascript">
+	(function(){
+		var mainContainer = document.getElementById('mainContainer');
+		mainContainer.style.displey = 'none';
+		var img = document.createElement('img');
+		img.src = './img/pushBoxSprite.png';
+		img.onload = function (){
+		document.getElementsByTagName('p')[0].innerHTML = '全力加载中... ';
+		var box = document.getElementsByClassName('onloading')[0];
+		box.style.display = 'none';//加载完成后页面消失
+		mainContainer.style.displey = 'block';
+		};
+	}())
+     </script>
        <!-- 游戏的地图、人物界面 -->
        <div id="mapArea" class="clearfix"></div>
        <!-- 游戏的控制按钮界面 -->
