--- a/Minesweeper/index.html
+++ b/Minesweeper/index.html
@@ -76,7 +76,7 @@
       </div>
     </div>
     
-    <script src="./js/jQuery1.11.0.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://cdn.bootcss.com/jquery/1.11.0/jquery.min.js" charset="utf-8"></script>
     <script src="./js/index.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
